VeraSandBox2016/src/objects/Mission__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Costs_EUR__c</fullName>
        <label>Actual Costs EUR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Comments__c</fullName>
        <label>Assessment Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_EUR__c</fullName>
        <label>Budget EUR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CVIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Formal_Request__c</fullName>
        <label>Date of Formal Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Inquiry__c</fullName>
        <label>Date of Inquiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EB_Deployment_Notification__c</fullName>
        <label>EB Deployment Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EB_Inquiry_Notification__c</fullName>
        <label>EB Inquiry Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eff_Duration_m__c</fullName>
        <label>Eff. Duration (m)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eff_Start_Date__c</fullName>
        <label>Eff. Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ext_Duration_m__c</fullName>
        <label>Ext. Duration (m)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formal_Expert_Feedback__c</fullName>
        <label>Formal Expert Feedback</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formal_Req_Entity_Feedback__c</fullName>
        <label>Formal Req. Entity Feedback</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_South__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global South</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Country_and_General__c</fullName>
        <label>Impact (Country and General)</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informal_Expert_Feedback__c</fullName>
        <label>Informal Expert Feedback</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Informal_Req_Entity_Feedback__c</fullName>
        <label>Informal Req. Entity Feedback</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JRRID__c</fullName>
        <displayFormat>MIS-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jurisdiction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MENA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MENA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MENT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MENT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission_Context__c</fullName>
        <inlineHelpText>CONS: Consultation mission
COI/FFM : Commission of Inquiry/Fact-Finding Mission
I-TRIB: International Tribunal
H-TRIB: Hybrid Tribunal
N-TRIB: National Tribunal
P-KEEP: Peacekeeping Mission
INV/MON: Investigation/Monitoring</inlineHelpText>
        <label>Mission Context</label>
        <picklist>
            <picklistValues>
                <fullName>CONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COI/FFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-TRIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-TRIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N-TRIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P-KEEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INV/MON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mission_Outcome_mid_long_term__c</fullName>
        <label>Mission Outcome (mid/long-term)</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mission_Output_Comments__c</fullName>
        <label>Mission Output Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mission_Output__c</fullName>
        <label>Mission Output</label>
        <picklist>
            <picklistValues>
                <fullName>Criminal Proceeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mission_Type__c</fullName>
        <label>Mission Type</label>
        <picklist>
            <picklistValues>
                <fullName>GINV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pld_Duration_m__c</fullName>
        <label>Pld Duration (m)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pld_Start_Date__c</fullName>
        <label>Pld Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Political__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Political</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <label>Primary Focus</label>
        <picklist>
            <picklistValues>
                <fullName>GINV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGBV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rapid_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rapid Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGBV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SGBV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Significant_Impact__c</fullName>
        <label>Significant Impact</label>
        <picklist>
            <picklistValues>
                <fullName>TBA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>INQ: Inquiry
INQ-CL: Inquiry closed
REQ: Request
DEP: Deployed
COMP: Completed
CAN: Cancelled</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>INQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INQ-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TECH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRAIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TRAIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNKN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UNKN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2011_Syria_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2011 Syria Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Iraq_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 Iraq Conflict</label>
        <type>Checkbox</type>
    </fields>
    <label>Mission</label>
    <listViews>
        <fullName>All_Missions</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Mission_Type__c</columns>
        <columns>Mission_Context__c</columns>
        <columns>Primary_Focus__c</columns>
        <columns>Pld_Start_Date__c</columns>
        <columns>Pld_Duration_m__c</columns>
        <columns>Date_of_Inquiry__c</columns>
        <columns>Date_of_Formal_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Missions</label>
    </listViews>
    <listViews>
        <fullName>M_E_by_mission</fullName>
        <columns>NAME</columns>
        <columns>Significant_Impact__c</columns>
        <columns>Mission_Output__c</columns>
        <columns>Mission_Output_Comments__c</columns>
        <columns>Formal_Req_Entity_Feedback__c</columns>
        <columns>Informal_Req_Entity_Feedback__c</columns>
        <columns>Formal_Expert_Feedback__c</columns>
        <columns>Informal_Expert_Feedback__c</columns>
        <columns>Mission_Outcome_mid_long_term__c</columns>
        <filterScope>Everything</filterScope>
        <label>M&amp;E by mission</label>
    </listViews>
    <nameField>
        <label>Mission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>